--- a/sobre.html
+++ b/sobre.html
@@ -42,12 +42,11 @@
       
         </div>
      </main>
-
     <!-- Em construção -->
     <section class="Container">
         <h2>Sobre</h2> <!-- Adicionado texto -->
         <div class="Card">
-            <img src="./img/emcostrucao.png" alt="Em construção">
+            <img src="./img/perfil.jpg" alt="Em construção">
             <h3>Em construção</h3>
             <p>Este site está sendo aprimorado. Você pode acompanhar as novidades pelo canal do YouTube</p>
             <a href="https://www.youtube.com/c/RoboticapraticaBr" target="_blank" class="Button">Saiba +</a>
