--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <label for="check">&#x268c;</label>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./Prevençao.html">Prevenção</a></li>
+                    <li><a href="./Preven%C3%A7ao.html">Prevenção</a></li>
                     <li><a href="./sobre.html">Sobre</a></li>
                     <li><a href="./Contato.html">Contato</a></li>
                     <li><a href="./Apoio.html">Apoio</a></li>
@@ -46,13 +46,23 @@
         </div>
     </main>
 
+    <!-- Card -->
+    <section>
+        <div class="Card">
+            <div class="Container">
+                <img src="./img/imgcard.jpg" alt="Imagem do Card">
+                <p>Caso queira saber mais sobre o conteúdo do site, clique no botão abaixo.</p>
+                <a href="Preven%C3%A7ao.html"><button>Saiba mais</button></a>
+            </div>
+        </div>
+    </section>
+
     <!-- Introdução -->
     <section id="intro">
         <div class="Container">
             <h2>Home do meu site</h2>
             <ul>
                 <li>Bem-vindo ao Moto Consciente, sua referência em segurança para motociclistas responsáveis.</li>
-                <li>Explore nosso site para descobrir dicas e recursos essenciais para uma condução segura de motos.</li>
                 <li>Este site é um guia dedicado à segurança na condução de motos, oferecendo dicas e recursos para uma viagem segura.</li>
             </ul>
         </div>
