--- a/index.html
+++ b/index.html
@@ -47,23 +47,20 @@
     </main>
 
     <!-- Card -->
-    <section>
+    <section class="Container">
         <div class="Card">
-            <div class="Container">
                 <img src="./img/imgcard.jpg" alt="Imagem do Card">
-                <p>Caso queira saber mais sobre o conteúdo do site, clique no botão abaixo.</p>
+                <p>Quer explorar mais sobre os conteúdos do nosso site e aprofundar seus conhecimentos sobre prevenção de acidentes de moto? Clique no botão abaixo!</p>
                 <a href="Preven%C3%A7ao.html"><button>Saiba mais</button></a>
-            </div>
         </div>
     </section>
 
     <!-- Introdução -->
     <section id="intro">
         <div class="Container">
-            <h2>Home do meu site</h2>
+            <h2>Inicio</h2>
             <ul>
-                <li>Bem-vindo ao Moto Consciente, sua referência em segurança para motociclistas responsáveis.</li>
-                <li>Este site é um guia dedicado à segurança na condução de motos, oferecendo dicas e recursos para uma viagem segura.</li>
+                <li>Bem-vindo ao Moto Consciente, sua referência em segurança para motociclistas responsáveis.Descubra como evitar os perigos das estradas com nosso site dedicado à conscientização sobre acidentes de moto. Oferecemos orientações essenciais para garantir sua segurança e a de outros ao pilotar. Explore nosso conteúdo e aprenda a prevenir acidentes de forma eficaz. Sua segurança é nossa prioridade.</li>
             </ul>
         </div>
     </section>
