--- a/sobre.html
+++ b/sobre.html
@@ -36,22 +36,29 @@
     </div>
 </header>
 
-    <!-- conteúdo principal -->
-    <main class="Flex">
-        <div class="Container"><h1>Prevençoes de acidentes</h1><h2>Um site dedicado a mostrar como se prevenir de acidentes.</h2>
-      
+
+     <!-- Conteúdo principal -->
+     <main>
+        <div class="Banner">
+            <div class="Container">
+                <h1>Moto Consciente</h1>
+                <h2>Um site dedicado a mostrar como se prevenir de acidentes.</h2>
+            </div>
         </div>
-     </main>
-    <!-- Em construção -->
-    <section class="Container">
-        <h2>Sobre</h2> <!-- Adicionado texto -->
-        <div class="Card">
-            <img src="./img/perfil.jpg" alt="Em construção">
-            <h3>Em construção</h3>
-            <p>Este site está sendo aprimorado. Você pode acompanhar as novidades pelo canal do YouTube</p>
-            <a href="https://www.youtube.com/c/RoboticapraticaBr" target="_blank" class="Button">Saiba +</a>
+    </main>
+
+    <!-- Imagem e texto -->
+<div class="SideImage">
+    <div class="ImageAndText">
+        <img src="./img/FotoSobre.jpg" alt="Descrição da imagem">
+        <div class="TextBesideImage">
+            <h2>Sobre mim</h2>
+            <p>Olá, meu nome é Thiago porfirio malagolin , tenho 16 anos e faço curso de T.I no senac de tatuapé, esse é meuprimeiro site feito em HTML e CSS , espero que gostem !
+            </p>
         </div>
-    </section>
+    </div>
+</div>
+  
 
     <!-- Rodapé -->
     <footer>
