--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="./img/capa.jfif">
 </head>
 
-<body>
+<body class="color">
 
     <!-- Cabeçalho -->
     <header>
@@ -46,31 +46,44 @@
         </div>
     </main>
 
-    <!-- Card -->
-    <section class="Container">
-        <div class="Card">
-                <img src="./img/imgcard.jpg" alt="Imagem do Card">
-                <p>Quer explorar mais sobre os conteúdos do nosso site e aprofundar seus conhecimentos sobre prevenção de acidentes de moto? Clique no botão abaixo!</p>
-                <a href="Preven%C3%A7ao.html"><button>Saiba mais</button></a>
-        </div>
-    </section>
-
-    <!-- Introdução -->
-    <section id="intro">
-        <div class="Container">
-            <h2>Inicio</h2>
+    <section class="MiniBorda">
+        <div class="MiniBanner">
+            <h2>Olá</h2>
             <ul>
-                <li>Bem-vindo ao Moto Consciente, sua referência em segurança para motociclistas responsáveis.Descubra como evitar os perigos das estradas com nosso site dedicado à conscientização sobre acidentes de moto. Oferecemos orientações essenciais para garantir sua segurança e a de outros ao pilotar. Explore nosso conteúdo e aprenda a prevenir acidentes de forma eficaz. Sua segurança é nossa prioridade.</li>
+                <li>Bem-vindo ao Moto Consciente, sua referência em segurança para motociclistas responsáveis.Descubra
+                    como evitar os perigos das estradas com nosso site dedicado à conscientização sobre acidentes de
+                    moto. Oferecemos orientações essenciais para garantir sua segurança e a de outros ao pilotar.
+                    Explore nosso conteúdo e aprenda a prevenir acidentes de forma eficaz. Sua segurança é nossa
+                    prioridade.</li>
             </ul>
         </div>
     </section>
+
+    <section>
+        <div class="Container-h">
+            <div class="conteudo">
+                <img src="img/imgcard.jpg" alt="">
+            </div>
+            <div class="conteudo-texto">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt hic facere eaque ut. Odio eos
+                    doloribus distinctio libero sequi, corporis unde recusandae quasi! Suscipit velit vitae in, voluptas
+                    earum laudantium.</h2>
+                <a href="Prevençao.html" class="button"> Saiba +</a>
+            </div>
+        </div>
+    </section>
+
+    
+
 
     <!-- Rodapé -->
     <footer>
         <div class="Container Flex">
             <div id="social">
-                <a href="https://www.youtube.com/c/MotoConsciente" target="_blank"><img src="./img/youtube.png" alt="youtube"></a>
-                <a href="https://www.instagram.com/prof.joseassis/" target="_blank"><img src="./img/instagram.png" alt="instagram"></a>
+                <a href="https://www.youtube.com/c/MotoConsciente" target="_blank"><img src="./img/youtube.png"
+                        alt="youtube"></a>
+                <a href="https://www.instagram.com/prof.joseassis/" target="_blank"><img src="./img/instagram.png"
+                        alt="instagram"></a>
             </div>
             <div id="copyright">
                 <p>©2024 - Moto Consciente</p>
