--- a/sobre.html
+++ b/sobre.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -15,30 +14,30 @@
 </head>
 
 <body>
-   <!-- Cabeçalho -->
-<header>
-    <div class="FlexMenu" id="logo">
-        <!-- Link para a página inicial -->
-        <a href="./index.html">
-            <img src="./img/iconsite.png" alt="Logo site">
-        </a>
-        <nav>
-            <input type="checkbox" id="check">
-            <label for="check">&#x268c;</label>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./Prevençao.html">Prevenção</a></li>
-                <li><a href="./sobre.html">Sobre</a></li>
-                <li><a href="./Contato.html">Contato</a></li>
-                <li><a href="./Apoio.html">Apoio</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+    <!-- Cabeçalho -->
+    <header>
+        <div class="FlexMenu" id="logo">
+            <!-- Link para a página inicial -->
+            <a href="./index.html">
+                <img src="./img/iconsite.png" alt="Logo site">
+            </a>
+            <nav>
+                <input type="checkbox" id="check">
+                <label for="check">&#x268c;</label>
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./Prevençao.html">Prevenção</a></li>
+                    <li><a href="./sobre.html">Sobre</a></li>
+                    <li><a href="./Contato.html">Contato</a></li>
+                    <li><a href="./Apoio.html">Apoio</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 
-     <!-- Conteúdo principal -->
-     <main>
+    <!-- Conteúdo principal -->
+    <main>
         <div class="Banner">
             <div class="Container">
                 <h1>Moto Consciente</h1>
@@ -53,11 +52,12 @@
         <img src="./img/FotoSobre.jpg" alt="Descrição da imagem">
         <div class="TextBesideImage">
             <h2>Sobre mim</h2>
-            <p>Olá, meu nome é Thiago porfirio malagolin , tenho 16 anos e faço curso de T.I no senac de tatuapé, esse é meuprimeiro site feito em HTML e CSS , espero que gostem !
+            <p>Olá, meu nome é Thiago porfirio malagolin , tenho 16 anos e faço curso de T.I no senac de tatuapé, esse é
+                meuprimeiro site feito em HTML e CSS , espero que gostem !
             </p>
+        </div>
     </div>
-</div>
-  
+
 
     <!-- Rodapé -->
     <footer>
