--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <title>Moto Consciente</title>
     <!-- Link com a folha de estilo -->
     <link rel="stylesheet" href="style.css">
-    <!-- Importante para SEO -->
-    <meta name="description" content="Um site dedicado ao ensino da robótica como você nunca viu.">
-    <link rel="icon" href="./img/capa.jfif">
 </head>
 
 <body class="color">
@@ -59,21 +56,22 @@
         </div>
     </section>
 
-    <section>
+    <section id="fundo1">
         <div class="Container-h">
             <div class="conteudo">
                 <img src="img/imgcard.jpg" alt="">
             </div>
             <div class="conteudo-texto">
-                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt hic facere eaque ut. Odio eos
-                    doloribus distinctio libero sequi, corporis unde recusandae quasi! Suscipit velit vitae in, voluptas
-                    earum laudantium.</h2>
+                <h2>Descubra como evitar os perigos das estradas e proteger-se de acidentes de moto. Em nossa seção de
+                    prevenção, oferecemos uma variedade de recursos e conselhos para garantir sua segurança enquanto
+                    pilota. Clique no botão abaixo para explorar nossas dicas e orientações abrangentes sobre como se
+                    proteger e desfrutar de viagens seguras.</h2>
                 <a href="Prevençao.html" class="button"> Saiba +</a>
             </div>
         </div>
     </section>
 
-    
+
 
 
     <!-- Rodapé -->
