--- a/sobre.html
+++ b/sobre.html
@@ -42,22 +42,25 @@
             <div class="Container">
                 <h1>Moto Consciente</h1>
                 <h2>Um site dedicado a mostrar como se prevenir de acidentes.</h2>
+              
             </div>
         </div>
     </main>
 
     <!-- Imagem e texto -->
 
-    <div class="ImageAndText">
-        <img src="./img/FotoSobre.jpg" alt="Descrição da imagem">
-        <div class="TextBesideImage">
+    <section class="sobre-mim">
+        <div class="imagem-sobre">
+            <img src="./img/FotoSobre.jpg" alt="Descrição da imagem">
+        </div>
+        <div class="texto-sobre">
             <h2>Sobre mim</h2>
-            <p>Olá, meu nome é Thiago porfirio malagolin , tenho 16 anos e faço curso de T.I no senac de tatuapé, esse é
-                meuprimeiro site feito em HTML e CSS , espero que gostem !
+            <p>Olá, meu nome é Thiago porfirio malagolin sou casado com Sara porfirio , tenho 16 anos e faço curso de T.I no senac de tatuapé,
+                esse é
+                meu primeiro site feito em HTML e CSS , espero que gostem !
             </p>
         </div>
-    </div>
-
+    </section>
 
     <!-- Rodapé -->
     <footer>
