--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <label for="check">&#x268c;</label>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./Preven%C3%A7ao.html">Prevenção</a></li>
+                    <li><a href="./Prevençao.html">Prevenção</a></li>
                     <li><a href="./sobre.html">Sobre</a></li>
                     <li><a href="./Contato.html">Contato</a></li>
                     <li><a href="./Apoio.html">Apoio</a></li>
