--- a/sobre.html
+++ b/sobre.html
@@ -47,18 +47,22 @@
         </div>
     </main>
 
-    <!-- Imagem e texto -->
-
-    <section class="sobre-mim">
-        <div class="imagem-sobre">
-            <img src="./img/FotoSobre.jpg" alt="Descrição da imagem">
-        </div>
-        <div class="texto-sobre">
-            <h2>Sobre mim</h2>
-            <p>Olá, meu nome é Thiago porfirio malagolin sou casado com Sara porfirio , tenho 16 anos e faço curso de T.I no senac de tatuapé,
-                esse é
-                meu primeiro site feito em HTML e CSS , espero que gostem !
-            </p>
+     <!--Sobre-->
+     <section id="sobre">
+        <div class="ContainerSobre FlexSobre">
+            <div id="imgSobre">
+                <img src="./img/FotoSobre.jpg" width="250" height="250" alt="imagem Sobre">
+            </div>
+            <div id="textoSobre">
+                <h2>Olá!</h2>
+                <p>Eu me chamo Thiago</p>
+                <p>Sou um estudante do Senac, </p>
+                <p>e estou programando este site em html e css com o objetivo</p>
+                <p>de ajudar você a se </p>
+                <p>prevenir de acidentes de motos</p>
+                <p style="font-style: italic; color: rgb(87, 80, 129);">"Transforme seus sonhos em metas e suas metas em realizações."</p>
+                
+            </div>
         </div>
     </section>
 
