--- a/Prevençao/cuidados.html
+++ b/Prevençao/cuidados.html
@@ -18,18 +18,18 @@
     <header>
         <div class="FlexMenu" id="logo">
             <!-- Link para a página inicial -->
-            <a href="./index.html">
+            <a href="../index.html">
                 <img src="../img/iconsite.png" alt="Logo site">
             </a>
             <nav>
                 <input type="checkbox" id="check">
                 <label for="check">&#x268c;</label>
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./Prevenção.html">Prevenção</a></li>
-                    <li><a href="./sobre.html">Sobre</a></li>
-                    <li><a href="./Contato.html">Contato</a></li>
-                    <li><a href="./Apoio.html">Apoio</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../Prevenção.html">Prevenção</a></li>
+                    <li><a href="../sobre.html">Sobre</a></li>
+                    <li><a href="../Contato.html">Contato</a></li>
+                    <li><a href="../Apoio.html">Apoio</a></li>
                 </ul>
             </nav>
         </div>
