--- a/Prevençao.html
+++ b/Prevençao.html
@@ -63,7 +63,7 @@
             <!-- Cards -->
             <div class="card">
                 <h3>Usar Equipamentos de Proteção Adequados:</h3>
-                <img src="/img/equipamentos.png" alt="card-img" class="card-image">
+                <img src="img/equipamentos.png" alt="card-img" class="card-image">
                  <!-- Botão com link do YouTube -->
                  <a href="https://www.youtube.com/watch?v=XWd2kG-QiW4" target="_blank" class="youtube-button">Clique aqui para saber +</a>
                 <p>
@@ -72,20 +72,20 @@
             
             <div class="card1">
                 <h3>Manter manuntençao da moto em dia :</h3>
-                <img src="/img//manunentacao-de-moto.png" alt="card-img" class="card-image1">
+                <img src="img//manunentacao-de-moto.png" alt="card-img" class="card-image1">
                 <a href="https://www.youtube.com/watch?v=0_5Vm3-rPHc" target="_blank" class="youtube-button">Clique aqui para saber +</a>
                 <p>
                 <p> Verificar regularmente os freios, pneus, luzes, óleo e outros componentes da moto pode ajudar a prevenir falhas mecânicas que podem levar a acidentes.</p>
             </div>
             <div class="card2">
                 <h3>Conduzir Defensivamente:</h3>
-                <img src="/img/conduzir.png" alt="card-img" class="card-image2">
+                <img src="img/conduzir.png" alt="card-img" class="card-image2">
                 <a href="https://www.youtube.com/watch?v=3pRTAUtzyUA" target="_blank" class="youtube-button">Clique aqui para saber +</a>
                 <p>
                 <p>Realizar cursos de pilotagem segura pode melhorar as habilidades de condução, ensinando técnicas de manobra, controle da moto e como reagir a situações de emergência.</p>
             </div>
             <div class="card3">
-                <img src="/img//MOTO-ESCOLA.png" alt="card-img" class="card-image3">
+                <img src="img//MOTO-ESCOLA.png" alt="card-img" class="card-image3">
                 <a href="https://www.youtube.com/watch?v=zYwgUjdRpeE" target="_blank" class="youtube-button">Clique aqui para saber +</a>
                 <p>
                 <h3>Receber Treinamento Adequado:</h3>
