--- a/sobre.html
+++ b/sobre.html
@@ -51,7 +51,7 @@
      <section id="sobre">
         <div class="ContainerSobre FlexSobre">
             <div id="imgSobre">
-                <img src="./img/FotoSobre.jpg" width="250" height="250" alt="imagem Sobre">
+                <img src="./img/FotoS.jpg" width="250" height="250" alt="imagem Sobre">
             </div>
             <div id="textoSobre">
                 <h2>Olá!</h2>
